k8s/archive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practice-node-app
  namespace: practice-app
  labels:
    app: practice-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice-node-app
  template:
    metadata:
      labels:
        app: practice-node-app
    spec:
      containers:
        - name: node-app
          image: 602202572057.dkr.ecr.us-east-1.amazonaws.com/practice-node-app-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
